增加内容类型
内容类型

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -15,7 +15,7 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "枣庄便民平台",
     "navigationBarTextStyle": "black",
-    "enablePullDownRefresh":true
+    "enablePullDownRefresh":false
   },
   "tabBar":{
     "list":[{
