添加编辑发布内容界面
除了 逆地址编码和 图片上传其他均已完成

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/deployFunctions/deployFunctions",
     "pages/chooseLib/chooseLib",
     "pages/publish",
-    "pages/publish/publish"
+    "pages/publish/publish",
+    "pages/editPublish/editPublish"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
