--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,7 +10,8 @@
     "pages/chooseLib/chooseLib",
     "pages/publish",
     "pages/publish/publish",
-    "pages/editPublish/editPublish"
+    "pages/editPublish/editPublish",
+    "pages/my/my"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -35,7 +36,7 @@
         "selectedIconPath": "images/fabu_selected.png"
       },
       {
-        "pagePath": "pages/storageConsole/storageConsole",
+        "pagePath": "pages/my/my",
         "text": "我的",
         "iconPath": "images/wode.png",
         "selectedIconPath": "images/wode_selected.png"
