可以发布到数据库
加入腾讯定位sdk获取位置。
发布内容到数据库
发布时的图片还有点问题。

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,8 @@
     "pages/publish",
     "pages/publish/publish",
     "pages/editPublish/editPublish",
-    "pages/my/my"
+    "pages/my/my",
+    "pages/disclaimer/disclaimer"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
