--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -12,7 +12,8 @@
     "pages/publish/publish",
     "pages/editPublish/editPublish",
     "pages/my/my",
-    "pages/disclaimer/disclaimer"
+    "pages/disclaimer/disclaimer",
+    "pages/contentDetail/contentDetail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
