增加 contentFun 按照功能和频道查看内容，删除无用page userConsole

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,9 +1,9 @@
 {
   "cloud": true,
   "pages": [
+    "pages/contentFun/contentFun",
     "pages/index/index",
     "pages/commentManage/commentManage",
-
     "pages/userProfile/userProfile",
     "pages/contentDetail/contentDetail",
     "pages/publish",
