--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,16 +1,19 @@
 {
   "cloud": true,
   "pages": [
+
     "pages/index/index",
+    "pages/manger/report/report",
     "pages/contentFun/contentFun",
-    
     "pages/commentManage/commentManage",
     "pages/userProfile/userProfile",
     "pages/contentDetail/contentDetail",
     "pages/publish/publish",
     "pages/editPublish/editPublish",
     "pages/my/my",
-    "pages/disclaimer/disclaimer"
+    "pages/disclaimer/disclaimer",
+    
+    "pages/manger/ad/ad"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
